# BookJangler

./: progressTracker.md
docs/: implementationPlan.md  sessionGoal.md
docs/rules/: progressTrackerRules.md
ocr_markdown_pipeline/: README.md  output.md  pyproject.toml  pyrightconfig.json  testlog.out
ocr_markdown_pipeline/src/ocr_markdown_pipeline/: __init__.py  config.py  main.py
ocr_markdown_pipeline/src/ocr_markdown_pipeline/pipelines/: __init__.py  pipeline.py
ocr_markdown_pipeline/src/ocr_markdown_pipeline/tools/: ocr_tool.py  text_cleanup_tool.py
ocr_markdown_pipeline/tests/: test_ocr_tool.py  test_pipeline.py
